# esp-volcrtcdemo

./: sdkconfig
components/VolcEngineRTCLite/: CMakeLists.txt  idf_component.yml
components/VolcEngineRTCLite/include/: VolcEngineRTCLite.h
main/: AudioPipeline.c  AudioPipeline.h  CMakeLists.txt  VolcRTCDemo.c  config.h.example  opus_frames.h
